@@ -142,6 +142,9 @@
 /* Support X Input extension */
 #undef XINPUT
 
+/* Support MPX multipointer extension */
+#undef MPX
+
 /* Build XKB */
 #undef XKB
 
